name:                hs-cryptonote
version:             0.1.0.0
synopsis:            An implementation of the CryptoNote protocol in Haskell
-- description:
homepage:            https://github.com/nvmd/hs-cryptonote
bug-reports:         https://github.com/nvmd/hs-cryptonote/issues
license:             MIT
license-file:        LICENSE
author:              Sergey Kazenyuk <kazenyuk@gmail.com>
maintainer:          Sergey Kazenyuk <kazenyuk@gmail.com>
copyright:           (c) 2015 Sergey Kazenyuk <kazenyuk@gmail.com>
category:            Finance, Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag use_cryptonote_crypto
  description:         Use CryptoNote's cryptography implementation
  default:             False
flag enable_p2p_node_debug_commands
  description:         Enable P2P node debug commands
  default:             True

library
  exposed-modules:     Network.CryptoNote.Crypto.Hash,
                       Network.CryptoNote.Crypto.Hash.CryptoNightFast,
                       Network.CryptoNote.Crypto.Hash.CryptoNightSlow,
                       Network.CryptoNote.Crypto.Hash.CryptoNightTree,
                       Network.CryptoNote.Crypto.Hash.Types,
                       Network.CryptoNote.Crypto.Signature,
                       Network.CryptoNote.Crypto.Types,
                       Network.CryptoNote.Block.PoW,
                       Network.CryptoNote.Block.Types,
                       Network.CryptoNote.Identifiable,
                       Network.CryptoNote.Transaction,
                       Network.CryptoNote.Transaction.Input,
                       Network.CryptoNote.Transaction.Output,
                       Network.CryptoNote.Types,
                       Network.Levin.Command.Debug,
                       Network.Levin.Command.Handshake,
                       Network.Levin.Command.Ping,
                       Network.Levin.Command.TimedSync,
                       Network.Levin.Message,
                       Network.Levin.Peer,
                       Network.Levin.ProofOfTrust
  other-modules:       Network.CryptoNote.Crypto.Hash.FFI
  if flag(enable_p2p_node_debug_commands)
    cpp-options:       -DENABLE_P2P_NODE_DEBUG_COMMANDS
  -- other-extensions:
  include-dirs:        currency/src,
                       currency/src/crypto,
                       currency/contrib/epee/include
  ghc-options:         -Wall -rtsopts
  if flag(use_cryptonote_crypto)
    cpp-options:       -DUSE_FFI_CRYPTO
  build-depends:         base
                       , binary
                       , bytestring
                       , base16-bytestring
                       , largeword
                       , uuid
                       , aeson
                       , cryptonite >= 0.9
                       , memory
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       TestData
  -- other-extensions:
  extra-lib-dirs:      currency/build/release/src/crypto
  -- include-dirs:
  extra-libraries:     crypto
  ghc-options:         -Wall -rtsopts
  build-depends:         base
                       , hs-cryptonote
                       , binary
                       , bytestring
                       , base16-bytestring
                       , aeson
                       , HUnit
                       , QuickCheck
                       , test-framework
                       , test-framework-hunit
                       , test-framework-quickcheck2
  hs-source-dirs:      test/src
  default-language:    Haskell2010
